# Qrispay-project

./: .gitignore  PRESENTASI_QRIS_PAY.txt  PRESENTATION_FLOW.md  PRESENTATION_SLIDES.html  PROJECT_BRIEF.md  QA_PREPARATION.md  QNA_AND_CHALLENGES.html  README.md  netlify.toml
.gemini/: CONTEXT.md
anchor/: Anchor.toml
anchor/programs/qris-payment/: Cargo.toml
anchor/programs/qris-payment/src/: error.rs  lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/api/rialo/connect/: route.ts
frontend/src/app/api/rialo/faucet/: route.ts
frontend/src/components/: BalanceDisplay.module.css  BalanceDisplay.tsx  Globe.tsx  Header.module.css  Header.tsx  PaymentFlow.module.css  PaymentFlow.tsx  QRScanner.module.css  QRScanner.tsx  WalletProvider.tsx
frontend/src/lib/: rialo-playground.ts
frontend/src/stubs/: empty.ts
middleware-api/: .env.example  package-lock.json  package.json
middleware-api/src/: index.ts
middleware-api/src/routes/: payment.ts  rate.ts
middleware-api/src/services/: xendit.ts
middleware-api/src/utils/: converter.ts
